ChangeLog for ircd-seven
========================

This file lists every change made except typo and formatting fixes, which are
only listed in SVN log. For a summary of what has changed between releases,
see the NEWS file.

2006-09-24 Elfyn McBratney <beu@freenode.net>

	* doc/example.conf, doc/reference.conf: Make example.conf more concise
	and touch-up formatting in reference.conf.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/client.h, src/newconf.c, src/s_user.c, src/s_conf.c,
	help/opers/umode, -help/opers/locops, doc/reference.conf,
	doc/example.conf, doc/sgml/oper-guide/config.sgml,
	doc/sgml/oper-guide/umodes.sgml, modules/Makefile.in,
	-modules/m_locops.c, modules/m_wallops.c, modules/m_stats.c,
	+old/modules/m_locops.c: Remove LOCOPS.

2006-09-24 Elfyn McBratney <beu@freenode.net>

	* extensions/ip_cloaking.c, extensions/hurt.c,
	extensions/no_oper_invis.c: Move to unsupported/ until their fate is
	decided; adjust example.conf and reference.conf accordingly.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	doc/example.conf, doc/reference.conf, modules/core/m_kill.c: Fold
	local_kill and global_kill into 'kill' flag.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c,
	doc/example.conf, doc/reference.conf, modules/m_connect.c
	modules/core/m_squit.c: Replace 'remote' operflag with 'routing',
	which allows local and remote CONNECT/SQUIT.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* include/s_newconf.h, src/newconf.c, src/s_newconf.c, src/s_user.c,
	modules/core/m_message.c, modules/m_wallops.c: Add 'wallops' and
	'mass_notice' operflags. Remove 'nick_changes'; it will be replaced
	later by allowed snomasks.

2006-09-24 Stephen Bennett <spb@gentoo.org>

	* modules/core/m_sjoin.c: Don't deop override opers on sjoin unless
	they're actually opped.

2006-09-23 Elfyn McBratney <beu@freenode.net>
